--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
                 <img src="img/logo-white.png" alt="logo" class="logo">
             </div>
             <div class="text-box">
+
                 <h1 class="heading-primary">
                     <span class="heading-primary-main">OUTDOORS</span>
                     <span class="heading-primary-sub">is where life happens</span>
                 </h1>
+
+                <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
             </div>
 
         </header>
