--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
                         <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi voluptatem repellat magnam ea suscipit error debitis, tenetur libero eaque alias sapiente eveniet corporis corrupti dignissimos sunt dolorem aperiam, beatae accusamus.</p>
                         
-                        <a href="#" class="btn-text"></a>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
 
                     <div class="col-1-of-2">
-                        Col 1 of 2
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3"></div>
                     </div>
                 </div>
 
