--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
                 <div class="row">
                     <div class="col-1-of-3">
                         <div class="card">
-                            Card text
+                            <div class="card__side card__side--front"> <!-for the default side-!>
+                                front
+                            </div>
+                            <div class="card__side card__side--back  card__side--back--1"> <!-for the other side-!>
+                                back
+                            </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
@@ -120,7 +125,7 @@
                 </div>
             </section>
 
-            
+
         </main>
 
 <!--
