--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="CSS/icon-font.css">
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -104,25 +103,107 @@
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front"> <!-for the default side-!>
-                                front
+                                <div class="card__picture card__picture--1">
+                                    &nbsp; 
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading--span card__heading--span--1">
+                                        The Sea Explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul class="">
+                                        <li>3 day tour</li>
+                                        <li>upto 30 people</li>
+                                        <li>2 tour guides</li>
+                                        <li>Sleep in cozy hotel</li>
+                                        <li>Difficulty:Easy</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="card__side card__side--back  card__side--back--1"> <!-for the other side-!>
-                                back
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$297</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-1-of-3">
                         <div class="card">
-                            Card text
+                            <div class="card__side card__side--front"> <!-for the default side-!>
+                                <div class="card__picture card__picture--2">
+                                    &nbsp; 
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading--span card__heading--span--2">
+                                        The Forest Hiker
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul class="">
+                                        <li>7 day tour</li>
+                                        <li>upto 40 people</li>
+                                        <li>6 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty:medium</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back--2"> <!-for the other side-!>
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$497</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="card">
-                            Card text
+                            <div class="card__side card__side--front"> <!-for the default side-!>
+                                <div class="card__picture card__picture--3">
+                                    &nbsp; 
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading--span card__heading--span--3">
+                                        THe snow ADVENTURER
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul class="">
+                                        <li>5 day tour</li>
+                                        <li>upto 15 people</li>
+                                        <li>3 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty:hard</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back--3"> <!-for the other side-!>
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$897</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="u-center-text u-margin-top-big"> <!-Utility class for centering text. It acts as a parent element-!>
+                    <a href="#" class="btn btn--green">Discover all tours</a>
+                </div>
+
             </section>
 
 
