completed reviews section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         <li>upto 30 people</li>
                                         <li>2 tour guides</li>
                                         <li>Sleep in cozy hotel</li>
-                                        <li>Difficulty:Easy</li>
+                                        <li>Difficulty: Easy</li>
                                     </ul>
                                 </div>
                         </div>
@@ -172,7 +172,7 @@
                                         <li>upto 40 people</li>
                                         <li>6 tour guides</li>
                                         <li>Sleep in provided tents</li>
-                                        <li>Difficulty:medium</li>
+                                        <li>Difficulty: Medium</li>
                                     </ul>
                                 </div>
                         </div>
@@ -207,7 +207,7 @@
                                         <li>upto 15 people</li>
                                         <li>3 tour guides</li>
                                         <li>Sleep in provided tents</li>
-                                        <li>Difficulty:hard</li>
+                                        <li>Difficulty: Hard</li>
                                     </ul>
                                 </div>
                         </div>
@@ -231,9 +231,18 @@
             </div>
         </section>
 
+
 <!-----------Stories Section--------->           
 
 <section class="section-stories">
+    <div class="bg-video">
+        <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+            Your browser is not supported!
+        </video>
+
+    </div>
     <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
             We make people genuinely happy
@@ -244,6 +253,7 @@
         <div class="story">
             <figure class="story__shape">
                 <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+                <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
                 <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
@@ -254,6 +264,28 @@
                 </p>
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <div class="story">
+            <figure class="story__shape">
+                <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
+                <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+                <h3 class="heading-tertiary u-margin-bottom-small">My life is coompletely different now</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis atque, eveniet officia odio molestiae 
+                    quas labore quasi tenetur in beatae nulla ipsum aliquid iste et veritatis esse perferendis nisi?  
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque, eveniet officia odio molestiaeCupiditate?
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="u-center-text u-margin-top-huge">
+        <!-Utility class for centering text. It acts as a parent element-!>
+            <a href="#" class="btn-text">Read all stories &rarr;</a>
     </div>
 </section>
 
