--- a/index.html
+++ b/index.html
@@ -232,63 +232,103 @@
         </section>
 
 
-<!-----------Stories Section--------->           
+        <!-----------Stories Section--------->
 
-<section class="section-stories">
-    <div class="bg-video">
-        <video class="bg-video__content" autoplay muted loop>
-            <source src="img/video.mp4" type="video/mp4">
-            <source src="img/video.webm" type="video/webm">
-            Your browser is not supported!
-        </video>
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                    Your browser is not supported!
+                </video>
 
-    </div>
-    <div class="u-center-text u-margin-bottom-big">
-        <h2 class="heading-secondary">
-            We make people genuinely happy
-        </h2>
-    </div>
-
-    <div class="row">
-        <div class="story">
-            <figure class="story__shape">
-                <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
-                <figcaption class="story__caption">Mary Smith</figcaption>
-            </figure>
-            <div class="story__text">
-                <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis atque, eveniet officia odio molestiae 
-                    quas labore quasi tenetur in beatae nulla ipsum aliquid iste et veritatis esse perferendis nisi?  
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque, eveniet officia odio molestiaeCupiditate?
-                </p>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="story">
-            <figure class="story__shape">
-                <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
-                <figcaption class="story__caption">Jack Wilson</figcaption>
-            </figure>
-            <div class="story__text">
-                <h3 class="heading-tertiary u-margin-bottom-small">My life is coompletely different now</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis atque, eveniet officia odio molestiae 
-                    quas labore quasi tenetur in beatae nulla ipsum aliquid iste et veritatis esse perferendis nisi?  
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque, eveniet officia odio molestiaeCupiditate?
-                </p>
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
             </div>
-        </div>
-    </div>
 
-    <div class="u-center-text u-margin-top-huge">
-        <!-Utility class for centering text. It acts as a parent element-!>
-            <a href="#" class="btn-text">Read all stories &rarr;</a>
-    </div>
-</section>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+                        <figcaption class="story__caption">Mary Smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis atque, eveniet officia odio
+                            molestiae
+                            quas labore quasi tenetur in beatae nulla ipsum aliquid iste et veritatis esse perferendis
+                            nisi?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque, eveniet officia odio
+                            molestiaeCupiditate?
+                        </p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
+                        <figcaption class="story__caption">Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">My life is coompletely different now</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis atque, eveniet officia odio
+                            molestiae
+                            quas labore quasi tenetur in beatae nulla ipsum aliquid iste et veritatis esse perferendis
+                            nisi?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis atque, eveniet officia odio
+                            molestiaeCupiditate?
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <!-Utility class for centering text. It acts as a parent element-!>
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+        </section>
+
+
+        <!-----------Booking Section--------->
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <!-Utility class for centering text. It acts as a parent element-!>
+                                    <h2 class="heading-secondary">
+                                        Start Booking Now
+                                    </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                                <label for="name" class="form__label">Full name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                <label for="email" class="form__label">Email</label>
+                            </div>
+                    </div>
+
+                        <div class="form__group">
+                            <div class="form__radio-group">
+                                input.
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            </div>
+        </section>
 
     </main>
 
