--- a/index.html
+++ b/index.html
@@ -344,8 +344,35 @@
             </div>
             </div>
         </section>
-
     </main>
+
+
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                     <ul class="footer__list">
+                         <li class="footer__items"><a href="#" class="footer__link">Company</a></li>
+                         <li class="footer__items"><a href="#" class="footer__link">Contact Us</a></li>
+                         <li class="footer__items"><a href="#" class="footer__link">Careers</a></li>
+                         <li class="footer__items"><a href="#" class="footer__link">Privacy</a></li>
+                         <li class="footer__items"><a href="#" class="footer__link">Terms</a></li>
+                     </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Built by Nikhil Kumar. Copyright &copy; </a>
+                        
+                </p>
+            </div>
+        </div>
+
+    </footer>
 
     <!--
         <section class="grid-test">
